první metodiky import

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: Metodiky a zdroje k EG na jednom místě
 url: "https://egdilna.github.io/metodiky"
 repository: egdilna/metodiky
 aux_links:
-  - EGdílna: https://www.egdilna.cz
-  - EGOVedu: https://www.egovedu.cz
+  EGdílna: https://www.egdilna.cz
+  EGOVedu: https://www.egovedu.cz
 
 heading_anchors: false
 search_enabled: true
