--- a/_config.yml
+++ b/_config.yml
@@ -27,4 +27,4 @@ last_edit_time_format: "%d.%m.%Y"
 gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: "Navrhněte změny obsahu..."
 gh_edit_repository: "https://github.com/egdilna/metodiky/blob"
-gh_edit_branch: "work"
+gh_edit_branch: "main"
